2006-02-02  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (is_group_member): Fix comment.

2006-02-02  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (is_group_member): Use local group info type 1.  Test
	group for being a global group or a well-known SID before adding it
	to the group list.  Add comment.

2006-02-01  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc  (GetTcpTable): Define.
	* fhandler_socket.cc (address_in_use): New function to check if
	sockaddr_in address is already in use.
	(fhandler_socket::bind): Check if address is alreay in use in case of
	SO_REUSEADDR, to circumvent WinSock non-standard behaviour.

2006-02-01  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (dll_suffixes): Add .exe and "no suffix" to the list.

2006-01-31  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (check_path_access): Call find_exec with FE_DLL option.
	* path.h (enum fe_types): Add FE_DLL value.
	* spawn.cc (std_suffixes): Remove.
	(exe_suffixes): New suffix_info for executing files.
	(dll_suffixes): New suffix_info for searching shared libraries.
	(perhaps_suffix): Add opt argument.  Use dll_suffixes if FE_DLL
	option is given, exe_suffixes otherwise.
	(find_exec): Propagate opt argument to perhaps_suffix.  Drop suffix
	check when testing execute permission.
	(spawn_guts): Call perhaps_suffix with FE_NADA opt argument.

2006-01-31  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (av::fixup): Remove unused argument.
	(spawn_guts): Remove capitalization in debugging.

2006-01-31  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (find_exec): Only return files with execute permission set
	if ntsec is on.  Don't check execute permission of Windows batch files.
	(av::fixup): Handle empty files gracefully.  Drop execute permission
	test here.
	* path.cc (suffix_scan::next): Don't skip any suffix on first run.

2006-01-31  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cwdstuff::set): Don't set win32 error, only POSIX errno.
