@@ -85,7 +85,8 @@ typedef enum
     CW_HOOK,
     CW_ARGV,
     CW_ENVP,
-    CW_DEBUG_SELF
+    CW_DEBUG_SELF,
+    CW_SETUP_WINENV
   } cygwin_getinfo_types;
 
 #define CW_NEXTPID	0x80000000	/* or with pid to get next one */
