@@ -1,3 +1,9 @@
+2006-02-02  Christopher Faylor  <cgf@timesys.com>
+
+	* external.cc (setup_winenv): New function.
+	(cygwin_internal): Implement CW_SETUP_WINENV.
+	* sys/cygwin.h (cygwin_getinfo_types): Define CW_SETUP_WINENV.
+
 2006-02-02  Corinna Vinschen  <corinna@vinschen.de>
 
 	* security.cc (is_group_member): Fix comment.
